plex/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: plex
  labels:
    external-secrets/useClusterStore: "cluster-secrets"
