plex/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
spec:
  strategy:
    type: Recreate
  template:
    spec:
      containers:
        - name: plex
          image: plexinc/pms-docker:1.43.3
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              gpu.intel.com/i915: "1"
          ports:
            - containerPort: 1900
            - containerPort: 3005
            - containerPort: 8324
            - containerPort: 32400
            - containerPort: 32410
            - containerPort: 32412
            - containerPort: 32413
            - containerPort: 32414
            - containerPort: 32469
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /torrent
              name: transcode
            - mountPath: /movies
              name: movies
            - mountPath: /series
              name: series
            - mountPath: /music
              name: music
      volumes:
        - name: config
          hostPath:
            path: /opt/plex/config
            type: Directory
        - name: transcode
          hostPath:
            path: /opt/plex/transcode
            type: Directory
        - name: movies
          hostPath:
            path: /tank/media/movies
            type: Directory
        - name: series
          hostPath:
            path: /tank/media/series
            type: Directory
        - name: music
          hostPath:
            path: /tank/media/music
            type: Directory
